--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,10 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "pt.mobiweb.mvp2"
@@ -38,5 +42,5 @@ dependencies {
     //Retrofit
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-
+    implementation 'com.squareup.okhttp3:okhttp:3.13.1'
 }
