--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,9 @@ android {
     }
     compileSdkVersion 28
     defaultConfig {
+        resValue "string", "app_name", "MVP"
         applicationId "pt.mobiweb.mvp2"
-        minSdkVersion 21
+        minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -22,6 +23,11 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            resValue "string", "app_name", "MVP"
+        }
+        debug {
+            applicationIdSuffix ".debug"
+            resValue "string", "app_name", "MVP.debug"
         }
     }
 }
